--- a/composition/decomposition/app/src/App.css
+++ b/composition/decomposition/app/src/App.css
@@ -9,6 +9,8 @@
   justify-content: space-between;
   align-items: flex-start;
   gap: 24px;
-  padding-left: 80px;
 }
 
+.padding-left-80 {
+  padding-left: 80px;
+}
